- fix page title css
- fix user name and logout buttons overlapping in case of page refresh

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -137,6 +137,7 @@ html {
 		float: left;
 		width: 50%;
 		height: 100%;
+		font-weight: normal;
 
 		a {
 			color: @header-text-main-color-secondary;
